log/build_2026-04-08_11-44-06/ivan_1455_pkg/stderr.log
  File "/home/igsp-01/ros2_ws/src/ivan_1455_pkg/install/ivan_1455_pkg/lib/python3.12/site-packages/ivan_1455_pkg/overflow_listener.py", line 19
    def callback(self, msg)
                           ^
SyntaxError: expected ':'

